# jpgconverter

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
src/jpgconverter/: __init__.py  __main__.py  config.example.py  config_data.py  converter.py  progress.py  worker.py
